kubernetes/website-mrcupp/deployment.yaml
# Deployment File
# - domain:  emotionalsupportpizza.com
# - purpose: website

# setup the namespace
apiVersion: v1
kind: Namespace
metadata:
  name: mrcupp
---
# do the deployment of the beast
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mrcupp-website
  namespace: mrcupp
  labels:
    domain: mrcupp.com
    app: mrcupp-website  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mrcupp-website
  template:
    metadata:
      annotations:
        linkerd.io/inject: enabled
      labels:
        app: mrcupp-website
    spec:
      containers:
        - name: mrcupp-website
          image: iammrcupp/mrcupp-project:v1.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "250m"
              memory: "100Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
# setup NodePort access (for use with nginx)
apiVersion: v1
kind: Service
metadata:
  name: mrcupp-website
  namespace: mrcupp
spec:
  selector:
    app: mrcupp-website
  type: NodePort
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30210
