kubernetes/website-mrcupp/ingress.yaml


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mrcupp-website-ingress
  namespace: mrcupp
  labels:
    name: mrcupp-website
    app: mrcupp-website
  annotations:
    kubernetes.io/ingress.class: "nginx"
    #nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    cert-manager.io/acme-challenge-type: http01
    
spec:
  tls:
  - hosts:
    - "mrcupp.com"
    secretName: mrcupp-website-https
  rules:
  - host: mrcupp.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mrcupp-website
            port: 
              number: 80
